refactor code to avoid global vars - main closure added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
   </header>
   <div class="scroll-to-top">
-    <button class="scroll-to-top__button" id="scroll-top-button">Scroll to top</button>
+    <button class="scroll-to-top__button hidden" id="scroll-top-button">Scroll to top</button>
   </div>
   <main>
     <header class="main__hero">
