--- a/index.html
+++ b/index.html
@@ -9,28 +9,26 @@
       href="https://fonts.googleapis.com/css?family=Fira+Sans:900|Merriweather&display=swap"
       rel="stylesheet"
     />
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/index.css" rel="stylesheet" />
   </head>
   <body>
     <!-- HTML Follows BEM naming conventions 
-  IDs are only used for sections to connect menu achors to sections -->
-    <header class="page__header">
-      <div class="navbar__container">
-        <button class="collapse">
+  IDs are only used for sections, to connect menu achors to sections and for the scroll-to-top button -->
+    <header class="header">
+      <nav class="navbar">
+        <button class="collapse-button">
           Menu
         </button>
-        <nav class="navbar__menu collapsable-m">
-          <!-- Navigation starts as empty UL that will be populated with JS -->
-          <ul id="navbar__list"></ul>
-        </nav>
-      </div>
+        <ul class="collapsable-m" id="navbar__list"></ul>
+        <!-- Navigation starts as empty UL that will be populated with JS -->
+      </nav>
     </header>
-    <div class="scroll-to-top float-right">
+    <div class="scroll-to-top">
       <button class="hidden" id="scroll-top-button">
         Scroll to top
       </button>
     </div>
-    <main>
+    <main class="main">
       <header class="main__header">
         <h1>Landing Page</h1>
       </header>
@@ -39,9 +37,9 @@
       a data attribute that will populate the li node.
       -->
       <section id="section1" data-nav="Section 1" class="active">
-        <div class="landing__container">
+        <div class="main__container">
           <h2>Section 1</h2>
-          <button class="collapse">
+          <button class="collapse-button">
             toggle section
           </button>
           <div class="collapsable open">
@@ -70,9 +68,9 @@
         </div>
       </section>
       <section id="section2" data-nav="Section 2">
-        <div class="landing__container">
+        <div class="main__container">
           <h2>Section 2</h2>
-          <button class="collapse">
+          <button class="collapse-button">
             toggle section
           </button>
           <div class="collapsable open">
@@ -101,9 +99,9 @@
         </div>
       </section>
       <section id="section3" data-nav="Section 3">
-        <div class="landing__container">
+        <div class="main__container">
           <h2>Section 3</h2>
-          <button class="collapse">
+          <button class="collapse-button">
             toggle section
           </button>
           <div class="collapsable open">
@@ -132,9 +130,9 @@
         </div>
       </section>
       <section id="section4" data-nav="Section 4">
-        <div class="landing__container">
+        <div class="main__container">
           <h2>Section 4</h2>
-          <button class="collapse">
+          <button class="collapse-button">
             toggle section
           </button>
           <div class="collapsable open">
@@ -163,9 +161,9 @@
         </div>
       </section>
       <section id="section5" data-nav="Section 5">
-        <div class="landing__container">
+        <div class="main__container">
           <h2>Section 5</h2>
-          <button class="collapse">
+          <button class="collapse-button">
             toggle section
           </button>
           <div class="collapsable open">
@@ -194,71 +192,9 @@
         </div>
       </section>
       <section id="section6" data-nav="Section 6">
-        <div class="landing__container">
+        <div class="main__container">
           <h2>Section 6</h2>
-          <button class="collapse">
-            toggle section
-          </button>
-          <div class="collapsable open">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
-              fermentum metus faucibus lectus pharetra dapibus. Suspendisse
-              potenti. Aenean aliquam elementum mi, ac euismod augue. Donec eget
-              lacinia ex. Phasellus imperdiet porta orci eget mollis. Sed
-              convallis sollicitudin mauris ac tincidunt. Donec bibendum, nulla
-              eget bibendum consectetur, sem nisi aliquam leo, ut pulvinar quam
-              nunc eu augue. Pellentesque maximus imperdiet elit a pharetra.
-              Duis lectus mi, aliquam in mi quis, aliquam porttitor lacus. Morbi
-              a tincidunt felis. Sed leo nunc, pharetra et elementum non,
-              faucibus vitae elit. Integer nec libero venenatis libero ultricies
-              molestie semper in tellus. Sed congue et odio sed euismod.
-            </p>
-
-            <p>
-              Aliquam a convallis justo. Vivamus venenatis, erat eget pulvinar
-              gravida, ipsum lacus aliquet velit, vel luctus diam ipsum a diam.
-              Cras eu tincidunt arcu, vitae rhoncus purus. Vestibulum fermentum
-              consectetur porttitor. Suspendisse imperdiet porttitor tortor,
-              eget elementum tortor mollis non.
-            </p>
-          </div>
-        </div>
-      </section>
-      <section id="section7" data-nav="Section 7">
-        <div class="landing__container">
-          <h2>Section 7</h2>
-          <button class="collapse">
-            toggle section
-          </button>
-          <div class="collapsable open">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
-              fermentum metus faucibus lectus pharetra dapibus. Suspendisse
-              potenti. Aenean aliquam elementum mi, ac euismod augue. Donec eget
-              lacinia ex. Phasellus imperdiet porta orci eget mollis. Sed
-              convallis sollicitudin mauris ac tincidunt. Donec bibendum, nulla
-              eget bibendum consectetur, sem nisi aliquam leo, ut pulvinar quam
-              nunc eu augue. Pellentesque maximus imperdiet elit a pharetra.
-              Duis lectus mi, aliquam in mi quis, aliquam porttitor lacus. Morbi
-              a tincidunt felis. Sed leo nunc, pharetra et elementum non,
-              faucibus vitae elit. Integer nec libero venenatis libero ultricies
-              molestie semper in tellus. Sed congue et odio sed euismod.
-            </p>
-
-            <p>
-              Aliquam a convallis justo. Vivamus venenatis, erat eget pulvinar
-              gravida, ipsum lacus aliquet velit, vel luctus diam ipsum a diam.
-              Cras eu tincidunt arcu, vitae rhoncus purus. Vestibulum fermentum
-              consectetur porttitor. Suspendisse imperdiet porttitor tortor,
-              eget elementum tortor mollis non.
-            </p>
-          </div>
-        </div>
-      </section>
-      <section id="section8" data-nav="Section 8">
-        <div class="landing__container">
-          <h2>Section 8</h2>
-          <button class="collapse">
+          <button class="collapse-button">
             toggle section
           </button>
           <div class="collapsable open">
@@ -287,7 +223,7 @@
         </div>
       </section>
     </main>
-    <footer class="page__footer">
+    <footer class="footer">
       <p>&copy Udacity</p>
     </footer>
     <script src="js/app.js"></script>
