fix collapsable menu bug

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
         <button class="collapse-button">
           Menu
         </button>
-        <ul class="collapsable-m" id="navbar__list"></ul>
-        <!-- Navigation starts as empty UL that will be populated with JS -->
+        <div class="collapsable-m">
+          <ul id="navbar__list"></ul>
+          <!-- Navigation starts as empty UL that will be populated with JS -->
+        </div>
       </nav>
     </header>
     <div class="scroll-to-top">
