--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
           Menu
         </button>
         <div class="collapsable-m">
-          <ul id="navbar__list"></ul>
+          <ul class="hiddennable" id="navbar__list"></ul>
           <!-- Navigation starts as empty UL that will be populated with JS -->
         </div>
       </nav>
     </header>
     <div class="scroll-to-top">
-      <button class="hidden" id="scroll-top-button">
+      <button class="hidden hiddennable" id="scroll-top-button">
         Scroll to top
       </button>
     </div>
